# PlaywrightPython

./: README.md  pyproject.toml  pytest.ini  state.json
auth_state/: state.json
resources/components/: Forms.py
resources/enums/: ErrorMessage.py
resources/pageObjects/: FilterProductPage.py  HomePage.py  Navbar.py  ProductDetailsPage.py  ProductFilterSidebar.py  ProductPage.py  ShoppingCart.py  SportDietProductPage.py
tests/: conftest.py
tests/add_to_cart/: navbar_products_test.py
tests/create_account/: create_account_test.py  state.json
