[tool.poetry]
name = "playwrightpython"
version = "0.1.0"
description = ""
authors = ["Rocky Kuang <shrkuang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
playwright = "^1.41.2"
pytest = "^8.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
